# micelio-code

./: .gitignore  .taurignore  BACKLOG.md  CHANGELOG.md  Cargo.toml  Entitlements.plist  LICENSE  README.md  release-please-config.json  rust-toolchain.toml  tauri.conf.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: frontend.yml  release-please.yml  rust.yml
capabilities/: default.json
docs/: prompt-reflection-system.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.tsx  bindings.ts  index.css  main.tsx  shims.d.ts  theme.ts  types.ts
frontend/src/components/: AboutModal.tsx  AdvancedSettings.tsx  AnimatedPanel.tsx  AppearanceSettings.tsx  BgTasksChip.tsx  ChatSettings.tsx  CodeEditor.tsx  CodeViewer.tsx  CommandPalette.tsx  Composer.tsx  ConfirmModal.tsx  ContextWindow.tsx  EditApprovalCard.tsx  GitContext.tsx  JsonBlock.tsx  LedgerDetail.tsx  McpSettings.tsx  MdComponents.tsx  Message.tsx  MessageList.tsx  Modal.tsx  ModeSelector.tsx  ModelRolesSelector.tsx  NodeModal.tsx  (+32 more)
icons/: icon.icns
src/: lib.rs  main.rs
src/backend/: cmd.rs  config.rs  error.rs  graph_test.rs  hierarchy.rs  knowledge.rs  llm.rs  locks.rs  mod.rs  ollama.rs  openai_compat.rs  openrouter.rs  prompt.rs  review.rs  sessions.rs  skill_watcher.rs  skills.rs  symbols.rs  tokens.rs  updater.rs  workspace.rs
src/commands/: agent.rs  bg.rs  chat.rs  graph.rs  mcp.rs  mod.rs  openers.rs  review.rs  sessions.rs  settings.rs  skills.rs  updater.rs  workspace.rs
(+60 files in other folders)
